zigbee2mqtt/base/deployment.yaml
# Should probably look at rootless for this
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: zigbee2mqtt
  name: zigbee2mqtt
  namespace: hass
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zigbee2mqtt
    spec: 
      containers:
      - image: koenkk/zigbee2mqtt:2.7.2
        name: zigbee2mqtt
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
            squat.ai/zigbee: 1
        volumeMounts:
          - name: zigbee2mqtt-data
            mountPath: /data
          - name: zigbee2mqtt-udev
            mountPath: /run/udev
          - name: localtime
            mountPath: /etc/localtime
            readOnly: true
          - name: adapter
            mountPath: /dev/zigbee
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 0
          failureThreshold: 30
          timeoutSeconds: 1
          periodSeconds: 5
        securityContext:
          privileged: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt
        - name: zigbee2mqtt-udev
          hostPath:
            path: /run/udev
        - name: adapter
          hostPath:
            path: /dev/serial/by-id/usb-ITEAD_SONOFF_Zigbee_3.0_USB_Dongle_Plus_V2_20231031115325-if00
        - name: localtime
          hostPath:
            path: /etc/localtime
