zigbee2mqtt/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: zigbee2mqtt
  name: zigbee2mqtt
  namespace: hass
spec:
  ports:
    - name: zigbee2mqtt
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: zigbee2mqtt
  type: ClusterIP
